WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
309944
REGRESSION(
309258@main
): Broke the iOS build (no matching push, -Wunknown-pragmas)
https://bugs.webkit.org/show_bug.cgi?id=309944
Summary
REGRESSION(309258@main): Broke the iOS build (no matching push, -Wunknown-pra...
Abrar Rahman Protyasha
Reported
2026-03-13 21:18:19 PDT
As seen on EWS...
https://s3-us-west-2.amazonaws.com/ews-archives.webkit.org/ios-simulator-26-arm64-release-compile-webkit-without-change/5fb042fa-23266.txt
``` In file included from /Volumes/Data/worker/iOS-26-Simulator-Build-EWS/build/WebKitBuild/Release-iphonesimulator/DerivedSources/WebCore/unified-sources/UnifiedSource45-nonARC.mm:4: /Volumes/Data/worker/iOS-26-Simulator-Build-EWS/build/Source/WebCore/platform/ios/PlatformScreenIOS.mm:234:1: error: pragma diagnostic pop could not pop, no matching push [-Werror,-Wunknown-pragmas] 234 | ALLOW_DEPRECATED_DECLARATIONS_END | ^ In file included from /Volumes/Data/worker/iOS-26-Simulator-Build-EWS/build/WebKitBuild/Release-iphonesimulator/DerivedSources/WebCore/unified-sources/UnifiedSource45-nonARC.mm:1: In file included from /Volumes/Data/worker/iOS-26-Simulator-Build-EWS/build/Source/WebCore/WebCorePrefix.h:34: In file included from /Volumes/Data/worker/iOS-26-Simulator-Build-EWS/build/WebKitBuild/Release-iphonesimulator/usr/local/include/wtf/Platform.h:31: /Volumes/Data/worker/iOS-26-Simulator-Build-EWS/build/WebKitBuild/Release-iphonesimulator/usr/local/include/wtf/Compiler.h:518:43: note: expanded from macro 'ALLOW_DEPRECATED_DECLARATIONS_END' 518 | #define ALLOW_DEPRECATED_DECLARATIONS_END IGNORE_WARNINGS_END | ^ /Volumes/Data/worker/iOS-26-Simulator-Build-EWS/build/WebKitBuild/Release-iphonesimulator/usr/local/include/wtf/Compiler.h:494:29: note: expanded from macro 'IGNORE_WARNINGS_END' 494 | #define IGNORE_WARNINGS_END IGNORE_WARNINGS_END_IMPL(GCC) | ^ /Volumes/Data/worker/iOS-26-Simulator-Build-EWS/build/WebKitBuild/Release-iphonesimulator/usr/local/include/wtf/Compiler.h:456:44: note: expanded from macro 'IGNORE_WARNINGS_END_IMPL' 456 | #define IGNORE_WARNINGS_END_IMPL(compiler) _Pragma(_COMPILER_STRINGIZE(compiler diagnostic pop)) | ^ <scratch space>:88:20: note: expanded from here 88 | GCC diagnostic pop | ^ In file included from /Volumes/Data/worker/iOS-26-Simulator-Build-EWS/build/WebKitBuild/Release-iphonesimulator/DerivedSources/WebCore/unified-sources/UnifiedSource45-nonARC.mm:4: /Volumes/Data/worker/iOS-26-Simulator-Build-EWS/build/Source/WebCore/platform/ios/PlatformScreenIOS.mm:237:1: error: pragma diagnostic pop could not pop, no matching push [-Werror,-Wunknown-pragmas] 237 | ALLOW_DEPRECATED_DECLARATIONS_END | ^ In file included from /Volumes/Data/worker/iOS-26-Simulator-Build-EWS/build/WebKitBuild/Release-iphonesimulator/DerivedSources/WebCore/unified-sources/UnifiedSource45-nonARC.mm:1: In file included from /Volumes/Data/worker/iOS-26-Simulator-Build-EWS/build/Source/WebCore/WebCorePrefix.h:34: In file included from /Volumes/Data/worker/iOS-26-Simulator-Build-EWS/build/WebKitBuild/Release-iphonesimulator/usr/local/include/wtf/Platform.h:31: /Volumes/Data/worker/iOS-26-Simulator-Build-EWS/build/WebKitBuild/Release-iphonesimulator/usr/local/include/wtf/Compiler.h:518:43: note: expanded from macro 'ALLOW_DEPRECATED_DECLARATIONS_END' 518 | #define ALLOW_DEPRECATED_DECLARATIONS_END IGNORE_WARNINGS_END | ^ /Volumes/Data/worker/iOS-26-Simulator-Build-EWS/build/WebKitBuild/Release-iphonesimulator/usr/local/include/wtf/Compiler.h:494:29: note: expanded from macro 'IGNORE_WARNINGS_END' 494 | #define IGNORE_WARNINGS_END IGNORE_WARNINGS_END_IMPL(GCC) | ^ /Volumes/Data/worker/iOS-26-Simulator-Build-EWS/build/WebKitBuild/Release-iphonesimulator/usr/local/include/wtf/Compiler.h:456:44: note: expanded from macro 'IGNORE_WARNINGS_END_IMPL' 456 | #define IGNORE_WARNINGS_END_IMPL(compiler) _Pragma(_COMPILER_STRINGIZE(compiler diagnostic pop)) | ^ <scratch space>:91:20: note: expanded from here 91 | GCC diagnostic pop | ^ 2 errors generated. ```
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2026-03-13 21:18:24 PDT
<
rdar://problem/172533843
>
Abrar Rahman Protyasha
Comment 2
2026-03-13 21:20:44 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/60618
EWS
Comment 3
2026-03-13 21:29:40 PDT
Committed
309259@main
(c7a429728dae): <
https://commits.webkit.org/309259@main
> Reviewed commits have been landed. Closing PR #60618 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug