REGRESSION (309258@main): Broke the iOS build (no matching push, -Wunknown-pragmas) https://bugs.webkit.org/show_bug.cgi?id=309944 rdar://172533843

Unreviewed build fix.

* Source/WebCore/platform/ios/PlatformScreenIOS.mm:
(WebCore::availableScreenSize):

Canonical link: https://commits.webkit.org/309259@main