Source/WebCore/platform/ios/PlatformScreenIOS.mm
@@ -231,7 +231,7 @@ ALLOW_DEPRECATED_DECLARATIONS_END
 FloatSize availableScreenSize()
 {
 // FIXME: rdar://172495534 Stop using deprecated `_isClassic` and `UIApplicationSceneClassicModeOriginalPad`.
-ALLOW_DEPRECATED_DECLARATIONS_END
+ALLOW_DEPRECATED_DECLARATIONS_BEGIN
     if (PAL::deviceHasIPadCapability() && [[PAL::getUIApplicationClassSingleton() sharedApplication] _isClassic])
         return { 320, 480 };
 ALLOW_DEPRECATED_DECLARATIONS_END
